# ocrsuite

./: .gitignore  AgenticAIFlowForOCR_Guide.md  DeepSeekOCR_Guide.md  DeepSeekOCR_Local_Guide.md  LICENSE  LLMS.txt  Modelfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SPECIFICATION.md  ocrsuite.yaml.example  pyproject.toml
.github/: copilot-instructions.md
docs/: AUDIT_REPORT_2026-02-23.md  LATEX_VERIFICATION.md  LOGGING.md  MODELFILE.md  OUTPUT_FORMAT.md  OUTPUT_FORMAT_GUIDE.md
src/ocrsuite/: __init__.py  assembler.py  config.py  gui.py  latex_verifier.py  main.py  ollama_client.py  postprocessor.py  preprocessor.py  utils.py
tests/: __init__.py  conftest.py  test_assembler.py  test_cli.py  test_config.py  test_latex_verifier.py  test_ollama_client.py  test_postprocessor.py  test_preprocessor.py
